[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moon390"
version = "0.1.0"
description = "Async control library for the Simaudio MOON Neo 390"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["moon390*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["moon390", "tests", "manual_test.py"]

[tool.ruff]
line-length = 120
extend-exclude = ["simaudio_moon_390_OLD_INCOMPLETE.py"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), and mccabe complexity (C90) -- the same
# check families the old .flake8 enforced.
select = ["E", "W", "F", "C90"]
# E203 conflicts with how formatters space slices; flake8's W503 has no Ruff
# equivalent (Ruff never warns on line breaks before binary operators).
ignore = ["E203"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
