[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moon390"
version = "0.1.0"
description = "Async control library for the Simaudio MOON Neo 390"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
]

# The library is vendored inside the HA component (no PyPI). Build config points
# at its location; nothing here is published.
[tool.setuptools.packages.find]
where = ["custom_components/simaudio_moon"]
include = ["moon390*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
# moon390 is vendored under the component; mypy_path lets `import moon390` resolve
# as a top-level package (it's checked transitively via the tests). The HA
# integration files import `homeassistant` and are linted by ruff, not type-checked
# here (that needs homeassistant installed -- a future CI concern).
mypy_path = "custom_components/simaudio_moon"
files = ["tests", "manual_test.py"]

[tool.ruff]
line-length = 120
extend-exclude = ["simaudio_moon_390_OLD_INCOMPLETE.py"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), and mccabe complexity (C90) -- the same
# check families the old .flake8 enforced.
select = ["E", "W", "F", "C90"]
# E203 conflicts with how formatters space slices; flake8's W503 has no Ruff
# equivalent (Ruff never warns on line breaks before binary operators).
ignore = ["E203"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
